// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c0 + .c0 {
  margin-left: 16px;
}

.c1 {
  height: 32px;
  min-width: 8px;
  background: #38A9DB;
}

.c2 {
  color: #323232;
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#38A9DB"
  />
  <span
    className="c2"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with color prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c0 + .c0 {
  margin-left: 16px;
}

.c1 {
  height: 32px;
  min-width: 8px;
  background: repeating-linear-gradient(to bottom,#CCCCCC,#CCCCCC 15%,transparent 15%,transparent 20%);
}

.c2 {
  color: #323232;
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#CCCCCC"
  />
  <span
    className="c2"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with dashed prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c0 + .c0 {
  margin-left: 16px;
}

.c1 {
  height: 32px;
  min-width: 8px;
  background: repeating-linear-gradient(to bottom,#38A9DB,#38A9DB 15%,transparent 15%,transparent 20%);
}

.c2 {
  color: #323232;
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#38A9DB"
  />
  <span
    className="c2"
  >
    Chart Legend
  </span>
</div>
`;
